--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       <div class="container">
         <header class="site-header">
           <nav class="site-navigation">
-            <a href="" class="logo">
+            <a class="logo">
               <img src="img/logo.svg" alt="Логотип Глейси" width="154" height="64">
             </a>
             <ul class="main-navigation">
               <li class="main-navigation__item">
                 <a href="#" class="main-navigation__link">Каталог</a>
-                <div class="main-navigation__submenu submenu">
+                <div class="site-navigation__dropdown main-navigation__submenu submenu">
                   <ul class="submenu__list featured">
                     <li class="submenu__item">
                       <a class="submenu__link" href="#">Новинки</a>
@@ -40,44 +40,54 @@
                   </ul>
                 </div><!-- /.main-navigation__submenu -->
               </li>
-              <li class="main-navigation__item"><a href="#">Доставка и оплата</a></li>
-              <li class="main-navigation__item"><a href="#">О Компании</a></li>
+              <li class="main-navigation__item"><a href="#" class="main-navigation__link">Доставка и оплата</a></li>
+              <li class="main-navigation__item"><a href="#" class="main-navigation__link">О Компании</a></li>
             </ul><!-- /.main-navigation -->
 
             <ul class="user-navigation">
               <li class="user-navigation__item user-navigation__item--search">
-                <a href="#">
-                  <img src="img/loupe.svg" alt="">
-                  <div class="search-form-wrapper">
-                    <form class="search-form" action="https://echo.htmlacademy.ru" method="GET">
-                      <label for="search-input" class="visually-hidden">Что ищем?</label>
-                      <input type="search" name="search" id="search-input" placeholder="Что ищем?" required>
-                    </form><!-- /.search-form -->
-                  </div><!-- /.search-form-wrapper -->
+                <a class="user-navigation__item-link" href="#">
+                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17"><path fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/></svg>
                 </a>
+                <div class="site-navigation__dropdown search-form-wrapper">
+                  <form class="search-form" action="https://echo.htmlacademy.ru" method="GET">
+                    <label for="search-input" class="visually-hidden">Что ищем?</label>
+                    <input type="search" name="search" class="search-input" id="search-input" placeholder="Что ищем?" required>
+                  </form><!-- /.search-form -->
+                </div><!-- /.search-form-wrapper -->
               </li>
               <li class="user-navigation__item user-navigation__item--login">
-                <a href="#">Вход</a>
-                <div class="login-form-wrapper">
+                <a class="user-navigation__item-link" href="#">
+                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="19" viewBox="0 0 21 19"><g fill="#000"><path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z"/><path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"/></g></svg>
+                  Вход
+                </a>
+                <div class="site-navigation__dropdown login-form-wrapper">
                   <form class="login-form" action="https://echo.htmlacademy.ru" method="POST">
                     <label for="login-email-input" class="visually-hidden">Электронная почта</label>
                     <input type="email" name="email" id="login-email-input" placeholder="Электронная почта" required>
                     <label for="login-password-input" class="visually-hidden">Пароль</label>
                     <input type="password" name="password" id="login-password-input" placeholder="Пароль" required>
-                    <button class="button" type="submit">Войти</button>
-                    <a href="password-reset.html">Забыли пароль?</a>
-                    <a href="registration.html">Новая регистрация</a>
+                    <div class="login-form-bottom">
+                      <button class="button" type="submit">Войти</button>
+                      <ul class="login-form-bottom__links">
+                        <li><a href="password-reset.html">Забыли пароль?</a></li>
+                        <li><a href="registration.html">Новая регистрация</a></li>
+                      </ul>
+                    </div><!-- /.login-form-bottom -->
                   </form>
                 </div><!-- /.login-form-wrapper -->
               </li>
               <li class="user-navigation__item user-navigation__item--cart">
-                <a href="#">Пусто</a>
+                <a class="user-navigation__item-link" href="#">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20"><g fill="#FFF"><path d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"/><circle cx="6.984" cy="18" r="2"/><circle cx="15.984" cy="18" r="2"/></g></svg>
+                  Пусто
+                </a>
               </li>
             </ul><!-- /.user-navigation -->
           </nav><!-- /.site-navigation -->
           <div class="site-header__contacts">
-            <p>С 10 до 20, ежедневно</p>
-            <a href="tel:+88124502525">8 812 450-25-25</a>
+            <p class="working-hours">С 10 до 20, ежедневно</p>
+            <a class="phone" href="tel:+88124502525">8 812 450-25-25</a>
           </div><!-- /.site-header__contacts -->
         </header><!-- /.site-header -->
       </div><!-- /.container -->
