--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <ul class="user-navigation">
               <li class="user-navigation__item user-navigation__item--search">
-                <a class="user-navigation__link" href="#">
+                <a class="user-navigation__link" href="search.html">
                   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17"><path fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/></svg>
                 </a>
                 <div class="site-navigation__dropdown search-form-wrapper">
@@ -57,7 +57,7 @@
                 </div><!-- /.search-form-wrapper -->
               </li>
               <li class="user-navigation__item user-navigation__item--login">
-                <a class="user-navigation__link" href="#">
+                <a class="user-navigation__link" href="login.html">
                   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="19" viewBox="0 0 21 19"><g fill="#000"><path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z"/><path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"/></g></svg>
                   Вход
                 </a>
@@ -78,10 +78,31 @@
                 </div><!-- /.login-form-wrapper -->
               </li>
               <li class="user-navigation__item user-navigation__item--cart">
-                <a class="user-navigation__link" href="#">
+                <a class="user-navigation__link" href="shopping-cart.html">
                   <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20"><g fill="#FFF"><path d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"/><circle cx="6.984" cy="18" r="2"/><circle cx="15.984" cy="18" r="2"/></g></svg>
                   Пусто
                 </a>
+                <div class="site-navigation__dropdown cart-list-dropdown">
+                  <ul class="cart__list">
+                    <li class="cart__item">
+                      <button type="button" class="close-button"><span class="visually-hidden">Удалить</span></button>
+                      <img class="cart__item-img" src="img/orange.jpg" alt="Пломбир с апельсиновым джемом" width="33" height="33">
+                      <strong class="cart__item-name">Пломбир с апельсиновым джемом</strong>
+                      <span class="cart__item-calculation">1,5 кг х <span class="cart__item-price">200 руб.</span></span>
+                      <span class="cart__item-total">300 руб.</span>
+                    </li><!-- /.cart__item -->
+                    <li class="cart__item">
+                      <button type="button" class="close-button"><span class="visually-hidden">Удалить</span></button>
+                      <img class="cart__item-img" src="img/strawberry.jpg" alt="Клубничный пломбир с присыпкой из белого шоколада" width="33" height="33">
+                      <strong class="cart__item-name">Клубничный пломбир с присыпкой из белого шоколада</strong>
+                      <span class="cart__item-calculation">1,5 кг х <span class="cart__item-price">300 руб.</span></span>
+                      <span class="cart__item-total">450 руб.</span>
+                    </li><!-- /.cart__item -->
+                  </ul><!-- /.cart__list -->
+                  <hr>
+                  <p class="cart__total">Итого: 750 руб.</p>
+                  <a href="#" class="button">Оформить заказ</a>
+                </div><!-- /.site-navigation__dropdown -->
               </li>
             </ul><!-- /.user-navigation -->
           </nav><!-- /.site-navigation -->
