Create promotions section

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
           </div><!-- /.site-header__contacts -->
         </header><!-- /.site-header -->
 
+
         <!-- SLIDERS -->
         <section class="slider">
           <h2 class="visually-hidden">Лучшие мороженные</h2>
@@ -144,6 +145,23 @@
             </li>
           </ul><!-- /.slider__list -->
         </section><!-- /.slider -->
+
+
+        <section class="promotions">
+          <h2 class="visually-hidden">Промоакции</h2>
+          <ul class="promo__list">
+            <li class="promo__item promo__item--raspberry">
+              <h3 class="promo__title">Малинка даром!</h3>
+              <p class="promo__text">При покупке 2 кг любого фруктового мороженого, добавим&nbsp; в ваш заказ банку малинового варенья бесплатно.</p>
+              <a href="promo.html" class="button">Хочу варенье!</a>
+            </li><!-- /.promo__item -->
+            <li class="promo__item promo__item--chocolate">
+              <h3 class="promo__title">Шоколадки даром!</h3>
+              <p class="promo__text">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+              <a href="promo.html" class="button">Хочу шоколадки!</a>
+            </li><!-- /.promo__item -->
+          </ul><!-- /.promo__list -->
+        </section><!-- /.promotions -->
       </div><!-- /.container -->
     </div><!-- /.site-wrapper -->
 
