Create featured products section

--- a/index.html
+++ b/index.html
@@ -162,6 +162,46 @@
             </li><!-- /.promo__item -->
           </ul><!-- /.promo__list -->
         </section><!-- /.promotions -->
+
+
+        <!-- PRODUCTS -->
+        <section class="products">
+          <h2 class="visually-hidden">Хиты сезона</h2>
+          <ul class="product__list">
+            <li class="product__item product product--hit">
+              <div class="product__img-wrapper">
+                <img src="img/orange.jpg" class="product__img" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                <p class="product__price">310₽<span class="product__measure">/кг</span></p>
+              </div><!-- /.product__img-wrapper -->
+              <a href="#" class="product__name">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+              <button type="button" class="button product__button">Быстрый просмотр</button>
+            </li><!-- /.product__item product -->
+            <li class="product__item product product--hit">
+              <div class="product__img-wrapper">
+                <img src="img/coffee.jpg" class="product__img" alt="Сливочно-кофейное с кусочками шоколада">
+                <p class="product__price">380₽<span class="product__measure">/кг</span></p>
+              </div><!-- /.product__img-wrapper -->
+              <a href="#" class="product__name">Сливочно-кофейное с кусочками шоколада</a>
+              <button type="button" class="button product__button">Быстрый просмотр</button>
+            </li><!-- /.product__item product -->
+            <li class="product__item product product--hit">
+              <div class="product__img-wrapper">
+                <img src="img/strawberry.jpg" class="product__img" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                <p class="product__price">355₽<span class="product__measure">/кг</span></p>
+              </div><!-- /.product__img-wrapper -->
+              <a href="#" class="product__name">Сливочно-клубничное с присыпкой из белого шоколада</a>
+              <button type="button" class="button product__button">Быстрый просмотр</button>
+            </li><!-- /.product__item product -->
+            <li class="product__item product product--hit">
+              <div class="product__img-wrapper">
+                <img src="img/cream.jpg" class="product__img" alt="Сливочное крем-брюле с карамельной подливкой">
+                <p class="product__price">415₽<span class="product__measure">/кг</span></p>
+              </div><!-- /.product__img-wrapper -->
+              <a href="#" class="product__name">Сливочное крем-брюле с карамельной подливкой</a>
+              <button type="button" class="button product__button">Быстрый просмотр</button>
+            </li><!-- /.product__item product -->
+          </ul><!-- /.product__list -->
+        </section><!-- /.products -->
       </div><!-- /.container -->
     </div><!-- /.site-wrapper -->
 
