Refactor featured products and shopping cart dropdown

--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
                   <ul class="cart__list">
                     <li class="cart__item">
                       <button type="button" class="close-button">Удалить</button>
-                      <img class="cart__item-img" src="img/orange.jpg" alt="Пломбир с апельсиновым джемом" width="33" height="33">
+                      <img class="cart__item-img" src="img/orange.png" alt="Пломбир с апельсиновым джемом" width="33" height="33">
                       <strong class="cart__item-name">Пломбир с апельсиновым джемом</strong>
                       <span class="cart__item-calculation">1,5 кг х <span class="cart__item-price">200 руб.</span></span>
                       <span class="cart__item-total">300 руб.</span>
                     </li><!-- /.cart__item -->
                     <li class="cart__item">
                       <button type="button" class="close-button"><span class="visually-hidden">Удалить</span></button>
-                      <img class="cart__item-img" src="img/strawberry.jpg" alt="Клубничный пломбир с присыпкой из белого шоколада" width="33" height="33">
+                      <img class="cart__item-img" src="img/strawberry.png" alt="Клубничный пломбир с присыпкой из белого шоколада" width="33" height="33">
                       <strong class="cart__item-name">Клубничный пломбир с присыпкой из белого шоколада</strong>
                       <span class="cart__item-calculation">1,5 кг х <span class="cart__item-price">300 руб.</span></span>
                       <span class="cart__item-total">450 руб.</span>
@@ -170,7 +170,7 @@
           <ul class="product__list">
             <li class="product__item product product--hit">
               <div class="product__img-wrapper">
-                <img src="img/orange.jpg" class="product__img" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                <img src="img/orange.png" class="product__img" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                 <p class="product__price">310₽<span class="product__measure">/кг</span></p>
               </div><!-- /.product__img-wrapper -->
               <a href="#" class="product__name">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
@@ -178,7 +178,7 @@
             </li><!-- /.product__item product -->
             <li class="product__item product product--hit">
               <div class="product__img-wrapper">
-                <img src="img/coffee.jpg" class="product__img" alt="Сливочно-кофейное с кусочками шоколада">
+                <img src="img/coffee.png" class="product__img" alt="Сливочно-кофейное с кусочками шоколада">
                 <p class="product__price">380₽<span class="product__measure">/кг</span></p>
               </div><!-- /.product__img-wrapper -->
               <a href="#" class="product__name">Сливочно-кофейное с кусочками шоколада</a>
@@ -186,7 +186,7 @@
             </li><!-- /.product__item product -->
             <li class="product__item product product--hit">
               <div class="product__img-wrapper">
-                <img src="img/strawberry.jpg" class="product__img" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                <img src="img/strawberry.png" class="product__img" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                 <p class="product__price">355₽<span class="product__measure">/кг</span></p>
               </div><!-- /.product__img-wrapper -->
               <a href="#" class="product__name">Сливочно-клубничное с присыпкой из белого шоколада</a>
@@ -194,7 +194,7 @@
             </li><!-- /.product__item product -->
             <li class="product__item product product--hit">
               <div class="product__img-wrapper">
-                <img src="img/cream.jpg" class="product__img" alt="Сливочное крем-брюле с карамельной подливкой">
+                <img src="img/cream.png" class="product__img" alt="Сливочное крем-брюле с карамельной подливкой">
                 <p class="product__price">415₽<span class="product__measure">/кг</span></p>
               </div><!-- /.product__img-wrapper -->
               <a href="#" class="product__name">Сливочное крем-брюле с карамельной подливкой</a>
