Create features section

--- a/index.html
+++ b/index.html
@@ -202,6 +202,19 @@
             </li><!-- /.product__item product -->
           </ul><!-- /.product__list -->
         </section><!-- /.products -->
+
+
+        <!-- FEATURES -->
+        <section class="features">
+          <h2 class="visually-hidden">Сильные стороны Глейси</h2>
+          <p class="features__lead">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</p>
+          <ul class="feature__list">
+            <li class="feature__item feature__item--technology">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li><!-- /.feature__item -->
+            <li class="feature__item feature__item--ingredients">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li><!-- /.feature__item -->
+            <li class="feature__item feature__item--quality">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li><!-- /.feature__item -->
+            <li class="feature__item feature__item--delivery">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li><!-- /.feature__item -->
+          </ul><!-- /.feature__list -->
+        </section><!-- /.features -->
       </div><!-- /.container -->
     </div><!-- /.site-wrapper -->
 
