--- a/index.html
+++ b/index.html
@@ -215,6 +215,27 @@
             <li class="feature__item feature__item--delivery">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li><!-- /.feature__item -->
           </ul><!-- /.feature__list -->
         </section><!-- /.features -->
+
+
+        <!-- BLOG AND SUBSCRIPTION -->
+        <div class="blog-subscription">
+          <section class="blog">
+            <h2>Новое в нашем блоге</h2>
+            <h3><a href="#">10 способов сервировки фруктовых щербетов к столу</a></h3>
+          </section><!-- /.blog -->
+
+          <section class="subscription">
+            <div class="subscription-overlay">
+              <h2 class="visually-hidden">Подписка на наш блог</h2>
+              <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+              <form class="subscription__form" action="https://echo.htmlacademy.ru" method="POST">
+                <label for="subscription-email-input" class="visually-hidden">Электронная почта</label>
+                <input type="email" id="subscription-email-input" class="subscription__input" name="email" placeholder="Электронная почта" required>
+                <button type="submit" class="button">Отправить</button>
+              </form>
+            </div><!-- /.subscription-overlay -->
+          </section><!-- /.subscription -->
+        </div><!-- /.blog-subscription -->
       </div><!-- /.container -->
     </div><!-- /.site-wrapper -->
 
