Contact and footer WIP

--- a/index.html
+++ b/index.html
@@ -237,7 +237,65 @@
           </section><!-- /.subscription -->
         </div><!-- /.blog-subscription -->
       </div><!-- /.container -->
+
+
+      <!-- CONTACT -->
+      <section class="contact">
+        <div class="contact__details">
+          <p class="address-text">Адрес главного офиса и офлайн-магазина:</p>
+          <address>ул. Большая Конюшенная 19/8, Санкт-Петербург</address>
+          <p class="phone-text">Для заказов по телефону:</p>
+          <a href="tel:+88124502525">8 812 450-25-25</a>
+          <p>(с 10 до 20 ежедневно)</p>
+          <a href="contact.html" class="button">Форма обратной связи</a>
+        </div><!-- /.contact__details -->
+      </section><!-- /.contact -->
     </div><!-- /.site-wrapper -->
+
+
+    <footer class="site-footer">
+      <div class="container">
+        <ul class="social-links__list">
+          <li class="social-links__item">
+            <a href="#" class="social-links__link">
+              Twitter
+              <img src="img/twitter.svg" alt="Логотип Twitter" width="32" height="32">
+            </a>
+          </li>
+          <li class="social-links__item">
+            <a href="#" class="social-links__link">
+              Instagram
+              <img src="img/instagram.svg" alt="Логотип Instagram" width="32" height="32">
+            </a>
+          </li>
+          <li class="social-links__item">
+            <a href="#" class="social-links__link">
+              Facebook
+              <img src="img/fb.svg" alt="Логотип Facebook" width="32" height="32">
+            </a>
+          </li>
+          <li class="social-links__item">
+            <a href="#" class="social-links__link">
+              ВКонтакте
+              <img src="img/vk.svg" alt="Логотип ВКонтакте" width="32" height="32">
+            </a>
+          </li>
+        </ul><!-- /.social-link__list -->
+
+        <ul class="information-link__list">
+          <li class="information-link__item"><a href="#">Для поставщиков</a></li><!-- /.information-link__item -->
+          <li class="information-link__item"><a href="#">Наши документы</a></li><!-- /.information-link__item -->
+          <li class="information-link__item"><a href="#">О производстве</a></li><!-- /.information-link__item -->
+          <li class="information-link__item"><a href="#">Экологические стандарты</a></li><!-- /.information-link__item -->
+        </ul><!-- /.information-link__list -->
+
+        <div class="footer-copyright">
+          <img src="img/logo-htmlacademy.svg" alt="Логотип HTML Academy" width="108" height="39">
+          <p>Сделано в HTML Academy © 2019</p>
+        </div><!-- /.footer-copyright -->
+      </div><!-- /.container -->
+    </footer><!-- /.site-footer -->
+
 
     <!-- MODALS -->
     <div class="modal__overlay">
